feat: doctor endpoints
